hard-gists/2184906/run.log
=== Docker Run Log for 2184906 ===
Started at: Mi 29. Okt 13:00:21 CET 2025

[2025-10-29 13:00:22] START: Running container for 2184906
[2025-10-29 13:00:22] SUCCESS: Container ce6b768ccc6c9d3ef804731968a5dbe9a1a5838e328b766098cb0a63e0de84e2 started for 2184906
=== Container logs for 2184906 ===
  File "/snippet.py", line 66
    print "Error: %s" % err, debug
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2184906 ===
[2025-10-29 13:00:24] INFO: Container ce6b768ccc6c9d3ef804731968a5dbe9a1a5838e328b766098cb0a63e0de84e2 has stopped
